--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
+    "sweetalert2": "^11.12.4",
     "tailwind-scrollbar-hide": "^1.1.7",
     "yup": "^1.4.0"
   },
