--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-multi-date-picker": "^4.5.2",
     "react-router-dom": "^6.25.1",
     "sweetalert2": "^11.12.4",
+    "swr": "^2.2.5",
     "tailwind-scrollbar-hide": "^1.1.7",
     "yup": "^1.4.0"
   },
