--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "date-fns": "^3.6.0",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
+    "react-multi-date-picker": "^4.5.2",
     "react-router-dom": "^6.25.1",
     "sweetalert2": "^11.12.4",
     "tailwind-scrollbar-hide": "^1.1.7",
